--- a/main/templates/admin/index.html
+++ b/main/templates/admin/index.html
@@ -61,7 +61,7 @@
 <script src="{{ STATIC_URL }}js/jwt.js"></script>
 <script src="{{ STATIC_URL }}js/admin_index.js"></script>
 {% endcompress %}
-<script src="https://cdn.jsdelivr.net/riot/2.3/riot+compiler.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/riot/2.6.7/riot+compiler.min.js"></script>
 <script src="{{ STATIC_URL }}tags/admin.tag" type="riot/tag"></script>
 <script src="{{ STATIC_URL }}tags/auth.tag" type="riot/tag"></script>
 <script src="{{ STATIC_URL }}tags/input-fields.tag" type="riot/tag"></script>
