--- a/event/templates/event/_orientation_box.html
+++ b/event/templates/event/_orientation_box.html
@@ -42,7 +42,7 @@
     </div>
     <div class="cell">
       <ez-file url="/api/change_headshot/" user_id="{{ user.id }}" name="Headshot"
-               done="{{ user.headshot|default_if_none:"" }}"></ez-file>
+               done="{{ user.headshot_url|default_if_none:"" }}"></ez-file>
     </div>
     <div class="cell">
       <ez-file url="/api/change_id_photo/" user_id="{{ user.id }}" name="ID Photo"
