style for new checkouts-box tag

--- a/main/static/less/base.less
+++ b/main/static/less/base.less
@@ -18,6 +18,7 @@
 @import "course.less";
 @import "permission.less";
 @import "poll.less";
+@import "checkout.less";
 
 @import "cart.less";
 @import "store.less";
