nuking old checkout view in favor of generic view

--- a/store/templates/store/base.html
+++ b/store/templates/store/base.html
@@ -14,7 +14,7 @@
       <a href="/shop/receipts/" class="btn btn-block btn-primary">Receipts</a>
     </div>
     <div class="col-sm-3">
-      <a href="/shop/checkouts/" class="btn btn-block btn-primary">Checkouts</a>
+      <a href="/tool/master/course/courseenrollment/" class="btn btn-block btn-primary">Checkouts</a>
     </div>
     {% if request.user.is_superuser and false %}
     <div class="col-sm-3">
