--- a/main/static/less/event.less
+++ b/main/static/less/event.less
@@ -1,8 +1,21 @@
-event-occurrence, event-list {
+/*event-occurrence, event-list {
   display: block;
   [data-reddot] {
     position: absolute;
     right: 30px;
     top: 0;
   }
+}*/
+
+event-bulk {
+  th, td { text-align: center; }
+  th { padding-top: 10px; }
+  .day .active { background: #aFa };
+  .day div {
+    cursor: pointer;
+    height: 40px;
+    line-height: 40px;
+    width: 40px;
+  }
+  .today { border: 2px solid; }
 }
