link back to admin via event-bulk tag

--- a/event/static/templates/event-bulk.html
+++ b/event/static/templates/event-bulk.html
@@ -1,5 +1,8 @@
 <event-bulk>
-  <h1>Repeat Event: { eventrepeat.event_name }</h1>
+  <h1>
+    Repeat Event: { eventrepeat.event_name }
+    <a href="/admin/event/event/{ eventrepeat.event_id }/change/" class="fa fa-edit"></a>
+  </h1>
   <p>
     Click any box to add or remove the following event:<br/>
     <b>Start Time:</b> { eventrepeat.start_time }<br/>
