prettying up the tool master page

--- a/main/static/less/checkout.less
+++ b/main/static/less/checkout.less
@@ -1,8 +1,6 @@
 checkouts-box {
-  .alert { position: relative; }
-  .bot-right {
-    bottom: 10px;
-    right: 10px;
-    position: absolute;
+  .alert { display: flex; }
+  .left {
+    width: 120px;
   }
 }  
