--- a/tool/templates/tool/master.html
+++ b/tool/templates/tool/master.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block main %}
-<div class="Checkouts col-sm-6">
+<div class="Checkouts col-sm-8">
   <checkouts-box model_slug="{{ model_slug }}" status="incomplete"></checkouts-box>
 </div>
 {% endblock %}
@@ -12,14 +12,20 @@
     <div each={ events }>
       <h2>{ name }</h2>
       <div class="alert alert-{ status }" each={ objects }>
-        <h4>{ display_name }</h4>
-        <div>Created On: { created_s }</div>
-        <div if={ completed }>Completed On: { completed_s }</div>
-        <div if={ failed }>Failed On: { failed_s }</div>
-        <div class="bot-right">
-          <button class="btn btn-success" onclick={ click } if={ !completed && !failed }>Pass</button>
-          <button class="btn btn-danger" onclick={ click } if={ !completed && !failed }>Fail</button>
-          <button class="btn btn-warning" onclick={ click } if={ completed || failed }>Undo</button>
+        <div class="left" if={ !completed && !failed }>
+          <button class="btn btn-success" onclick={ click }>Pass</button>
+          <button class="btn btn-danger" onclick={ click }>Fail</button>
+        </div>
+        <div class="left" if={ completed || failed }>
+          <div class="btn btn-danger fa fa-thumbs-down" if={ failed }></div>
+          <div class="btn btn-success fa fa-thumbs-up" if={ completed }></div>
+          <button class="btn btn-warning" onclick={ click }>Undo</button>
+        </div>
+        <div class="right">
+          <h4>{ display_name }</h4>
+          <div>Created On: { created_s }</div>
+          <div if={ completed }>Completed On: { completed_s }</div>
+          <div if={ failed }>Failed On: { failed_s }</div>
         </div>
       </div>
     </div>
