--- a/main/static/less/txrx.less
+++ b/main/static/less/txrx.less
@@ -388,16 +388,16 @@ h3.date {
     color: @gray-lighter;
     content: attr(data-reddot);
     display: inline-block;
-    font-family: sans-serif;
+    font-family: monospace;
     font-size: 12px;
     font-weight: bold;
-    height: 16px;
-    line-height: 16px;
-    margin-left: -1px;
+    height: 20px;
+    line-height: 20px;
+    margin: 0 5px;
     text-align: center;
     text-decoration: none;
     vertical-align: middle;
-    width: 16px;
+    width: 20px;
   }
 }
 [data-reddot="0"]:after { content: initial; display: none; }
