staff can no longer change headshots :(

--- a/main/static/less/txrx.less
+++ b/main/static/less/txrx.less
@@ -282,6 +282,13 @@ p,h1,h2,h3,h4,h5,h6{a{color: @link-color; }}
     text-align: center;
     width: 110px;
   }
+  ez-file .btn {
+    &.fa-trash, &.btn-success {
+      display: inline-block;
+      width: auto;
+      position: relative;
+    }
+  }
   .well { display: flex; flex-wrap: wrap; justify-content: space-between; }
 
   .text {
