--- a/event/templates/event/_orientation_box.html
+++ b/event/templates/event/_orientation_box.html
@@ -41,11 +41,11 @@
       </form>
     </div>
     <div class="cell">
-      <ez-file url="/api/change_headshot/" user_id="{{ user.id }}" name="Headshot"
+      <ez-file url="/api/change_headshot/" user_id="{{ user.id }}" name="Headshot" success_text="photo"
                done="{{ user.headshot_url|default_if_none:"" }}"></ez-file>
     </div>
     <div class="cell">
-      <ez-file url="/api/change_id_photo/" user_id="{{ user.id }}" name="ID Photo"
+      <ez-file url="/api/change_id_photo/" user_id="{{ user.id }}" name="ID Photo" success_text="ID"
                done="{{ user.id_photo_date|default_if_none:"" }}"></ez-file>
     </div>
     <div class="cell">
