--- a/main/static/less/checkout.less
+++ b/main/static/less/checkout.less
@@ -9,7 +9,7 @@ checkouts-box {
     text-align: center;
   }
   .image,.right { flex-shrink: 1; }
-  ez-file {
+  .img {
     flex-basis: 25%;
     text-align: center;
     max-width: 230px;
@@ -18,7 +18,7 @@ checkouts-box {
   .right { padding-left: 10px; }
   @media (max-width: @screen-sm-max) {
     .buttons button { font-size: 1.5em; margin: 0 1rem; }
-    ez-file,.right { flex-basis: 100%; }
-    ez-file { margin-bottom: 10px; }
+    .img,.right { flex-basis: 100%; }
+    .img { margin-bottom: 10px; }
   }
 }  
