changing some styling bugs when calendar is current in nav

--- a/main/static/less/nav.less
+++ b/main/static/less/nav.less
@@ -19,7 +19,7 @@
 }
 
 .navbar-nav > li.current {
-  a:after {
+  > a:after {
     background: @gray-lighter;
     content: "";
     display: block;
