--- a/main/static/less/txrx.less
+++ b/main/static/less/txrx.less
@@ -530,3 +530,69 @@ ul.errorlist { color: @brand-danger; }
   -webkit-filter: grayscale(1);
   filter: grayscale(1);
 }
+
+#support-page {
+  .hover-image {
+    .fixed-ratio(100%);
+    background-size: cover;
+    background-position: center;
+    color: white;
+    margin-bottom: 2rem;
+    position: relative;
+    .text {
+      background: rgba(30,30,30,0.9);
+      left: 0;
+      bottom: 0;
+      opacity: 0;
+      padding: 10px;
+      position: absolute;
+      width: 100%;
+      transition: opacity 0.5s;
+      @media (max-width: @screen-xs-max) { opacity: 1; }
+    }
+    &:hover .text { opacity: 1; }
+  }
+  h2, h4 { margin-bottom: 1em; text-align: center; }
+  money-widget {
+    display: block;
+    margin-bottom: 2rem;
+    [type=radio] { display: none; }
+    .btn-group {
+      border-radius: 10px;
+      display: flex;
+      margin-bottom: 20px;
+      overflow: hidden;
+    }
+    .btn-group > .btn { flex-grow: 1; }
+    .btn {
+      float: none;
+      height: 39px;
+      min-width: 75px;
+    }
+    label {
+      bottom: 0;
+      cursor: pointer;
+      left: 0;
+      line-height: 39px;
+      right: 0;
+      position: absolute;
+      text-align: center;
+      top: 0;
+    }
+    [type=text] {
+      background: transparent;
+      border: 0 !important;
+      color: inherit;
+      font-weight: bold;
+      height: 25px;
+      line-height: 25px;
+      outline: 0 !important;
+      padding: 0;
+      text-align: center;
+      width: 100px;
+      &:focus { color: #333; background: white; }
+    }
+    [type=text]:focus + label,  .btn-primary [type=text] + label { display: none; }
+    .btn-group.second { width: 50%; margin: 0 auto 40px; }
+  }
+}
