copy changes to the support page

--- a/main/templates/flatpages/support.html
+++ b/main/templates/flatpages/support.html
@@ -18,7 +18,7 @@
       </div>
       <div class="col-sm-6">
         <div class="hover-image" style="background-image: url(//txrxlabs.org/media/uploads/photos/2017-04/Kiosk.JPG)">
-          <div class="text">{{ settings.SITE_NAME }} is opening an entrepreneurship incubator on the Navigation Street Esplanade. This location provides real world training in entrepreneurship and fabrication allowing local youth to live, work, and innovate in the East End of Houston. The kiosk will offer free demo classes in 3D fabrication, XXXX, and Xxx.</div>
+          <div class="text">{{ settings.SITE_NAME }} is opening an entrepreneurship incubator on the Navigation Street Esplanade. This location provides real world training in entrepreneurship and fabrication allowing local youth to live, work, and innovate in the East End of Houston. The kiosk will offer free demo classes in 3D fabrication, laser cutting, and vertical farming. Our maker to market program will provide hand-made goods designed and fabricated by local youth.</div>
         </div>
       </div>
     </div>
@@ -41,7 +41,7 @@
       </div>
       <div class="col-sm-6">
         <h4>VOLUNTEER</h4>
-        <p>We are SO grateful for our team of volunteers that help us with our daily operations. If you are interested in joining our volunteer team, apply at <a href="https://airtable.com/shr6u0aDoBZjjCBBLll">https://airtable.com/shr6u0aDoBZjjCBBLll</a></p>
+        <p>We are SO grateful for our team of volunteers that help us with our daily operations. If you are interested in joining our volunteer team, apply at <a href="https://airtable.com/shr6u0aDoBZjjCBBL">https://airtable.com/shr6u0aDoBZjjCBBL</a></p>
       </div>
     </div>
   </div>
