adding support to nav

--- a/main/static/less/nav.less
+++ b/main/static/less/nav.less
@@ -126,6 +126,7 @@
   }
   .navbar-default .main-nav > li > a {
     margin-top: 22px;
+    padding: 8px;
     padding-top: 0;
     padding-bottom: 0;
     //.navFont;
