support copy change

--- a/main/templates/flatpages/support.html
+++ b/main/templates/flatpages/support.html
@@ -8,7 +8,7 @@
 <div class="row" id="support-page">
   <div id="flatpage" class="col-lg-8 col-lg-offset-2">
     <h2>SUPPORT CREATIVITY, INNOVATION, and CONNECTION!</h2>
-    <p class="lead">Your support helps us sustain and grow TXRX Labs as a space for education, innovation, and connection.</p>
+    <p class="lead">Your support helps us sustain and grow TXRX Labs as a space for education, collaboration, and innovation.</p>
     <p class="lead">Current funding is needed to support our Youth Programs and the Navigation Street Kiosk.</p>
     <div class="row">
       <div class="col-sm-6">
