--- a/main/templates/registration/registration_complete.html
+++ b/main/templates/registration/registration_complete.html
@@ -1,7 +1,7 @@
 {% extends "registration/base.html" %}
 
 {% block content %}
-<p>
-  Thank you for registering. Please check your email for a link to activate your account.
+<p class="lead">
+  Thank you for registering. Please check your email for a link to activate your account. <b>You cannot use this account until it is activated.</b>
 </p>
 {% endblock %}
