make courseclasstimes jump out a bit

--- a/main/static/less/base.less
+++ b/main/static/less/base.less
@@ -19,6 +19,7 @@
 @import "permission.less";
 @import "poll.less";
 @import "checkout.less";
+@import "notify.less";
 
 @import "cart.less";
 @import "store.less";
