removing password confirmation from registration and creating a modal auth forms

--- a/main/templates/_nav.html
+++ b/main/templates/_nav.html
@@ -59,9 +59,9 @@
           </a></li>
           {% endfor %}
           {% else %}
-          <li><a class="fa-hover txrx" href="{% url "account_register" %}">
+          <li><a class="fa-hover txrx" href="#/form/membership.RegistrationForm/">
               <i class="fa fa-user"></i> Register</a></li>
-          <li><a class="fa-hover txrx" href="/accounts/login/?next={{ login_redirect }}">
+          <li><a class="fa-hover txrx" href="#/auth/login/?next={{ login_redirect }}">
               <i class="fa fa-user"></i> Log in with Username</a></li>
           <li><center>--- or ---</center></li>
           <li><a class="fa-hover google" href="{% url "social:begin" "google-oauth2" %}?next={{ login_redirect }}">
