--- a/main/static/less/txrx.less
+++ b/main/static/less/txrx.less
@@ -532,27 +532,41 @@ ul.errorlist { color: @brand-danger; }
 }
 
 #support-page {
-  .hover-image {
+  .images .btn {
+    cursor: default;
+    margin-bottom: 2rem;
+    position: relative;
+    white-space: normal;
+    width: 100%;
+    @media (max-width: @screen-xs-max) {
+      padding-bottom: 100px;
+      .text { opacity: 1; }
+    }
+    &:hover .text { opacity: 1; }
+  }
+  .img {
     .fixed-ratio(100%);
     background-size: cover;
     background-position: center;
     color: white;
-    margin-bottom: 2rem;
     position: relative;
-    .text {
-      background: rgba(30,30,30,0.9);
-      left: 0;
-      bottom: 0;
-      opacity: 0;
-      padding: 10px;
-      position: absolute;
-      width: 100%;
-      transition: opacity 0.5s;
-      @media (max-width: @screen-xs-max) { opacity: 1; }
-    }
-    &:hover .text { opacity: 1; }
   }
-  h2, h4 { margin-bottom: 1em; text-align: center; }
+  .text {
+    background: rgba(30,30,30,0.9);
+    left: 0;
+    bottom: 0;
+    opacity: 0;
+    padding: 10px;
+    position: absolute;
+    width: 100%;
+    transition: opacity 0.5s;
+  }
+  h1 {
+    margin: 0 0 20px;
+    padding: 0;
+    border-bottom: 0;
+    text-align: center;
+  }
   money-widget {
     display: block;
     margin-bottom: 2rem;
@@ -593,7 +607,7 @@ ul.errorlist { color: @brand-danger; }
       &:focus { color: #333; background: white; }
     }
     [type=text]:focus + label,  .btn-primary [type=text] + label { display: none; }
-    .btn-group.second { width: 50%; margin: 0 auto 40px; }
+    .btn-group.second { width: 50%; margin: 0 auto 0; }
     @media (max-width: @screen-xs-max) {
       .btn-group.second { width: auto; }
       .btn { min-width: 0; }
