adding support logo for donor houston

--- a/main/static/less/txrx.less
+++ b/main/static/less/txrx.less
@@ -614,4 +614,5 @@ ul.errorlist { color: @brand-danger; }
       [type=text] { width: 50px; }
     }
   }
+  .support-logo { display: block; margin: 0 auto; max-width: 400px; }
 }
