--- a/main/templates/flatpages/support.html
+++ b/main/templates/flatpages/support.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load short_codes %}
+{% load short_codes static %}
 
 {% block full_title %}SUPPORT CREATIVITY, INNOVATION, and CONNECTION!{% endblock %}
 {% block header %}{% endblock %}
@@ -49,6 +49,8 @@
         <p>We are SO grateful for our team of volunteers that help us with our daily operations. If you are interested in joining our volunteer team, apply at <a href="https://airtable.com/shr6u0aDoBZjjCBBL">https://airtable.com/shr6u0aDoBZjjCBBL</a></p>
       </div>
     </div>
+    <a href="https://donorhouston.guidestar.org/" class="support-logo">
+      <img src="{% static "txrx/support-logo.jpg" %}" /></a>
   </div>
 </div>
 
