--- a/course/templates/course/index.html
+++ b/course/templates/course/index.html
@@ -48,27 +48,9 @@
       <course-list id="unscheduled-courses"></course-list>
     </ur-tab>
     <ur-tab title="My Classes ({{ user_sessions|length }})" href="{% url "course:user_ajax" "myclasses" %}"></ur-tab>
+    {% if instructor_sessions %}
+    <ur-tab title="Instructor ({{ instructor_sessions|length }})" href="{% url "course:user_ajax" "instructor" %}"></ur-tab>
+    {% endif %}
   </ur-tabs>
-
-  <ul class="nav nav-tabs" role="tablist">
-    <li class="active" id="all_classes_tab"><a href="#all_classes" role="tab" data-toggle="tab">
-        All Classes</a></li>
-    <li><a href="#myclasses" role="tab" data-toggle="tab"
-           data-href="{% url "course:user_ajax" "myclasses" %}">
-        My Classes ({{ user_sessions|length }})</a></li>
-    {% if instructor_sessions %}
-    <li><a href="#instructor_sessions" role="tab" data-toggle="tab"
-           data-href="{% url "course:user_ajax" "instructor" %}">
-        Instructor ({{ instructor_sessions|length }})</a></li>
-    {% endif %}
-  </ul>
-  <div class="tab-content">
-    <div class="tab-pane active course_list" id="all_classes">
-    </div>
-    <div class="tab-pane needs_ajax" id="myclasses"></div>
-    {% if instructor_sessions %}
-    <div class="tab-pane needs_ajax" id="instructor_sessions"></div>
-    {% endif %}
-  </div>
 </div>
 {% endblock %}
