--- a/main/templates/_nav.html
+++ b/main/templates/_nav.html
@@ -61,15 +61,15 @@
           {% else %}
           <li><a class="fa-hover txrx" href="#/form/membership.RegistrationForm/">
               <i class="fa fa-user"></i> Register</a></li>
-          <li><a class="fa-hover txrx" href="#/auth/login/?next={{ login_redirect }}">
+          <li><a class="fa-hover txrx" href="#/auth/login/">
               <i class="fa fa-user"></i> Log in with Username</a></li>
           <li><center>--- or ---</center></li>
-          <li><a class="fa-hover google" href="{% url "social:begin" "google-oauth2" %}?next={{ login_redirect }}">
+          <li><a class="fa-hover google" href="{% url "social:begin" "google-oauth2" %}">
               <i class="fa fa-google-plus"></i> Connect with Google</a></li>
-          <li><a class="fa-hover github" href="{% url "social:begin" "github" %}?next={{ login_redirect }}">
+          <li><a class="fa-hover github" href="{% url "social:begin" "github" %}">
               <i class="fa fa-github"></i> Connect with GitHub</a></li>
           {% if "pyauth" in request.GET %}
-          <li><a class="fa-hover facebook" href="{% url "social:begin" "facebook" %}?next={{ login_redirect }}">
+          <li><a class="fa-hover facebook" href="{% url "social:begin" "facebook" %}">
               <i class="fa fa-facebook"></i> Connect with Facebook</a></li>
           {% endif %}
           {% endif %}
