updating some tests

--- a/main/static/less/cart.less
+++ b/main/static/less/cart.less
@@ -10,6 +10,9 @@ shopping-cart .payment_buttons {
     position: absolute;
   }
 }
+.nav .hidden-xs cart-button {
+  float: none;
+}
 
 shopping-cart .item {
   border-bottom: @borderGray 1px solid;
