--- a/main/templates/_side.html
+++ b/main/templates/_side.html
@@ -13,20 +13,9 @@
     educate the public about technology and show how seemingly complex techniques can be used
     by anyone. If you like what we do, please donate.
   </p>
-  <form action="https://www.paypal.com/cgi-bin/webscr" method="post" style="margin:0;">
-    <input type="hidden" name="cmd" value="_donations">
-    <input type="hidden" name="business" value="txrxlabs@gmail.com">
-    <input type="hidden" name="lc" value="US">
-    <input type="hidden" name="item_name" value="{{ settings.SITE_NAME }}">
-    <input type="hidden" name="item_number" value="side-button">
-    <input type="hidden" name="no_note" value="0">
-    <input type="hidden" name="currency_code" value="USD">
-    <input type="hidden" name="bn" value="PP-DonationsBF:btn_donateCC_LG.gif:NonHostedGuest">
-    <center>
-      <input type="image" src="{{ STATIC_URL }}img/paypal-donate-button.png" border="0" height="30"
-             name="submit" alt="PayPal - The safer, easier way to pay online!">
-      <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-    </center>
+  <center>
+    <a href="/support/"><img src="{{ STATIC_URL }}img/paypal-donate-button.png" height="30"></a>
+  </center>
   </form>
 </section>
 
